# live_classifier_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/live_classifier/lib/live_classifier/: gpu_img_publisher  gpu_img_subscriber  img_publisher  img_subscriber  webcam_classifier
install/live_classifier/share/live_classifier/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/live_classifier/: package.xml  setup.cfg  setup.py
src/live_classifier/live_classifier/: arguscam_pub.py  arguscam_sub.py  webcam_classifier.py  webcam_pub.py  webcam_sub.py
